# haskell-xstatic

./: README.md  flake.nix
demo/: Demo.hs  Demo.html  package.yaml
demo-codemirror-ot/: README.md  Server.hs  demo-codemirror-ot.cabal
demo-novnc/: NoVNCServer.hs  demo-novnc.cabal
demo-quill-ot/: LICENSE  README.md  Server.hs  demo-quill-ot.cabal
demo-websockets-ki-htmx/: README.md  Server.hs  demo-websockets-ki-htmx.cabal
demo-xstatic/: Demo.hs  README.md  demo-xstatic.cabal  index.html  package.yaml
demo-xterm/: README.md  XtermServer.hs  demo-xterm.cabal
lucid-xstatic/: CHANGELOG.md  lucid-xstatic.cabal  package.yaml
lucid-xstatic/src/Lucid/: XStatic.hs
lucid2-xstatic/: LICENSE  package.yaml
lucid2-xstatic/src/Lucid/: XStatic.hs
servant-xstatic/: package.yaml  servant-xstatic.cabal
servant-xstatic/src/Servant/: XStatic.hs
servant-xstatic/src/XStatic/: Servant.hs
test/: Demo.html  xstatic-demo.cabal
xstatic/: CHANGELOG.md  package.yaml
xstatic-ace/: CHANGELOG.md  package.yaml  xstatic-ace.cabal
xstatic-ace/src/XStatic/: Ace.hs
xstatic-codemirror/: CHANGELOG.md  README.md  index.js  package-lock.json  package.json  package.yaml  xstatic-codemirror.cabal
xstatic-codemirror/src/XStatic/: CodeMirror.hs
xstatic-htmx/: CHANGELOG.md  package.yaml  xstatic-htmx.cabal
xstatic-htmx/src/XStatic/: Htmx.hs
xstatic-hyperscript/: CHANGELOG.md  package.yaml  xstatic-hyperscript.cabal
xstatic-hyperscript/src/XStatic/: Hyperscript.hs
xstatic-novnc/: CHANGELOG.md  package.json  package.yaml  xstatic-novnc.cabal
xstatic-novnc/src/XStatic/: NoVNC.hs
xstatic-otjs/: CHANGELOG.md  README.md  package.yaml  xstatic-otjs.cabal
xstatic-otjs/src/XStatic/: OTJS.hs
xstatic-pcm-player/: CHANGELOG.md  package.yaml  xstatic-pcm-player.cabal
xstatic-pcm-player/src/XStatic/: PcmPlayer.hs
xstatic-pdfjs/: CHANGELOG.md  package.yaml  xstatic-pdfjs.cabal
xstatic-pdfjs/src/XStatic/: PdfJS.hs
xstatic-quill/: CHANGELOG.md  README.md  package-lock.json  package.json  package.yaml  xstatic-quill.cabal
xstatic-quill-cursors/: CHANGELOG.md  README.md  package-lock.json  package.json  package.yaml  xstatic-quill-cursors.cabal
xstatic-quill-cursors/src/XStatic/: QuillCursors.hs
xstatic-quill/src/XStatic/: Quill.hs
xstatic-remixicon/: CHANGELOG.md  package.yaml  xstatic-remixicon.cabal
xstatic-remixicon/src/XStatic/: Remixicon.hs
xstatic-sakura/: CHANGELOG.md  package.yaml  xstatic-sakura.cabal
xstatic-sakura/src/XStatic/: Sakura.hs
xstatic-sortable/: CHANGELOG.md  package.yaml  xstatic-sortable.cabal
xstatic-sortable/src/XStatic/: Sortable.hs
xstatic-sweetalert2/: CHANGELOG.md  package.yaml  xstatic-sweetalert2.cabal
xstatic-sweetalert2/src/XStatic/: SweetAlert2.hs
xstatic-tailwind/: CHANGELOG.md  package.yaml  xstatic-tailwind.cabal
xstatic-tailwind/src/XStatic/: Tailwind.hs
xstatic-th/: package.yaml  xstatic-th.cabal
xstatic-th/src/XStatic/: TH.hs
xstatic-th/test/: Test.hs
xstatic-winbox/: CHANGELOG.md  package-lock.json  package.json  package.yaml  xstatic-winbox.cabal
xstatic-winbox/src/XStatic/: Winbox.hs
xstatic-xterm/: CHANGELOG.md  README.md  package-lock.json  package.json  package.yaml  xstatic-xterm.cabal
xstatic-xterm/src/XStatic/: Xterm.hs
xstatic/src/: XStatic.hs
