cabal-version: 3.0
version:       0
name:          demo-novnc
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       BSD-3-Clause
license-file:  LICENSE

executable demo-xterm
  main-is: NoVNCServer.hs
  hs-source-dirs: ./
  ghc-options: -Weverything -Wno-implicit-prelude -Wno-missing-import-lists -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-kind-signatures -Wno-monomorphism-restriction -Wno-missing-local-signatures
  build-depends:
      base < 5
    , bytestring
    , warp
    , xstatic-novnc
    , websockets
    , network-run
    , network
    , ki
    , servant-lucid
    , servant-server
    , servant-websockets
    , servant-xstatic
    , lucid
    , string-interpolate
  default-language: Haskell2010
