cabal-version: 3.0
version:       0
name:          demo-websockets-ki-htmx
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       BSD-3-Clause
license-file:  LICENSE

executable demo-websockets-ki-htmx
  main-is: Server.hs
  hs-source-dirs: ./
  ghc-options: -Weverything -Wno-implicit-prelude -Wno-missing-import-lists -Wno-missing-safe-haskell-mode -Wno-unsafe -Wno-missing-kind-signatures -Wno-monomorphism-restriction -Wno-missing-local-signatures
  build-depends:
      base < 5
    , lens
    , lens-aeson
    , bytestring
    , network
    , wai
    , warp
    , xstatic
    , xstatic-htmx
    , xstatic-remixicon
    , xstatic-tailwind
    , websockets
    , relude
    , ki
    , servant
    , servant-lucid
    , servant-server
    , servant-websockets
    , warp
    , lucid
    , lucid-htmx
  default-language: Haskell2010
