cabal-version: 3.0
version:       0
name:          demo-xstatic
author:        Tristan Cacqueray
maintainer:    tdecacqu@redhat.com
license:       BSD-3-Clause
license-file:  LICENSE

executable demo-xstatic
  main-is: Demo.hs
  hs-source-dirs: ./
  ghc-options: -Weverything -Wno-implicit-prelude -Wno-missing-import-lists -Wno-missing-safe-haskell-mode -Wno-unsafe
  build-depends:
      base
    , bytestring
    , file-embed
    , http-types
    , wai
    , warp
    , xstatic
    , xstatic-htmx
    , xstatic-remixicon
    , xstatic-sortable
    , xstatic-tailwind
  default-language: Haskell2010
